--- a/app/views/TF1XV1show.ejs
+++ b/app/views/TF1XV1show.ejs
@@ -61,31 +61,33 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
 <h1>Show Users</h1>
 
-<div class='well col-md-7'>
+<div class='fields-section well col-md-12'>
 <div class='row'>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='users'></div>		<div class='col-md-12'><label class='control-label title-label'>Name<B class='red'>*</B></label>
+<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='users'></div><div class='col-md-12'><label class='control-label title-label'>Name<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%= ((data["F0"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
-		<div class='col-md-12'><label class='control-label title-label'>Email<B class='red'>*</B></label>
+<div class='col-md-12'><label class='control-label title-label'>Email<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%= ((data["F1"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
-		<div class='col-md-12'><label class='control-label title-label'>Password</label>
+<div class='col-md-12'><label class='control-label title-label'>Password</label>
 		<div class='form-show' readonly=true>******</div></div>
-		<div class='col-md-12'><label class='control-label title-label'>Role</label>
+<div class='col-md-12'><label class='control-label title-label'>Role</label>
 <div class='form-show' readonly=true><% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "Administrator" + ",")) { %> <span class='pull-left wid120' alt='Administrator' title='Administrator'>Administrator</span> <% } %><% if (val.contains( "," + "Default" + ",")) { %> <span class='pull-left wid120' alt='Default' title='Default'>Default</span> <% } %></div></div>
-		<div class='col-md-12'><label class='control-label title-label'>Enable</label>
+<div class='col-md-12'><label class='control-label title-label'>Enable</label>
 <div class='form-show' readonly=true><% var val = data["F4"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left wid120' alt='Yes' title='Yes'>Yes</span> <% } %><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left wid120' alt='No' title='No'>No</span> <% } %></div></div>
-		<div class='col-md-12'><label class='control-label title-label'>TimeZone<B class='red'>*</B></label>
+<div class='col-md-12'><label class='control-label title-label'>TimeZone<B class='red'>*</B></label>
 <div class='form-show' readonly=true><% var val = data["F5"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "-360" + ",")) { %> <span class='pull-left wid150' alt='(UTC-06:00) Houston' title='(UTC-06:00) Houston'>(UTC-06:00) Houston</span> <% } %><% if (val.contains( "," + "330" + ",")) { %> <span class='pull-left wid150' alt='(UTC+05:30) India' title='(UTC+05:30) India'>(UTC+05:30) India</span> <% } %><% if (val.contains( "," + "480" + ",")) { %> <span class='pull-left wid150' alt='(UTC+08:00) China' title='(UTC+08:00) China'>(UTC+08:00) China</span> <% } %></div></div>
-<div class='col-md-12'>
-<hr></hr>
-<div><a  class="btn btn-primary col-md-2" href="/users/list">OK</a><a  class="btn btn-default" href="/users/update?Rid=<%= data["Rid"] %>"><img src="/img/edit.png" alt="Edit" title="Edit">Edit</a><a  class="btn btn-default" href="/users/copy?Rid=<%= data["Rid"] %>"><img src="/img/copy.png" alt="Copy&Create" title="Copy&Create">Copy&Create</a><a  class="btn btn-default" href="/users/new"><img src="/img/add.png" alt="Add new" title="Add new">Add new</a></div></div><div name='history' ></div>
+<div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
+<div class="col-md-0"><a class="btn btn-primary col-md-2"  href="/users/list" style="min-width:80px;" title="">OK</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/users/update?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/edit.png">Edit</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/users/copy?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/copy.png">Copy&Create</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/users/new" style="min-width:80px;" title=""><img src="/img/add.png">Add new</a></div>
+</div></div>
+<span name='history' class='col-md-12'></span>
 <script type='text/javascript'>getOPLogs('TF1', 'V1', '<%= data["Rid"] %>');</script>	</div></div>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -100,8 +102,7 @@
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -111,8 +112,8 @@
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -132,7 +133,7 @@
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
