--- a/app/views/Tangram.ejs
+++ b/app/views/Tangram.ejs
@@ -60,8 +60,8 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
 	<div class="well">
 		<h1 class="text-center" style="font-size: 48px;">TangramMy</h1>
 		<p>The tangrammy is a system enable DIY your own services. Its idea comes from <a target="_blank" href="http://en.wikipedia.org/wiki/Tangram"><img src="/img/favicon.ico">tangram</a>, and is implemented by NodeJS, Bootstrap, jQuery.
@@ -72,9 +72,9 @@
 <div class="col-md-12"><div class="row">
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF0/V1")) { %>
 	<div class="list-app">
-		<h3><small>[Hidden]</small>Roles <small>(TF0.V1)</small> </h3>
+		<h3><span name="blurupdate" url="/T/update?Rid=24A6M35&Title=" contenteditable="true">Roles</span> <small>(TF0.V1)</small> </h3>
 		<small><a href="/roles/list">http://~/roles/list </a> </small> <br /> 
-		<p>This application is used to define user role in this system.</p>
+		<p name="blurupdate" url="/T/update?Rid=24A6M35&Description=" contenteditable="true">This application is used to define user role in this system.</p>
 		<div class="text-right">
 			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=24A6M35" title="Rebuild application[Roles] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=24A6M35" title="View define detail of application[Roles]"><img class="icon15" src="/img/detail.png"></a>
@@ -85,9 +85,9 @@
 <% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T1/V1")) { %>
 	<div class="list-app">
-		<h3><small></small>Todo <small>(T1.V1)</small> </h3>
+		<h3><span name="blurupdate" url="/T/update?Rid=16WRUTP&Title=" contenteditable="true">Todo</span> <small>(T1.V1)</small> </h3>
 		<small><a href="/todo/list">http://~/todo/list </a> </small> <br /> 
-		<p>Todo list for Tangrammy tasks. <br />
+		<p name="blurupdate" url="/T/update?Rid=16WRUTP&Description=" contenteditable="true">Todo list for Tangrammy tasks. <br />
 To manage todo in "Initial", "In progress" and "Paused" status.</p>
 		<div class="text-right">
 			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=16WRUTP" title="Rebuild application[Todo] to active changes">Rebuild</a>
@@ -100,9 +100,9 @@ To manage todo in "Initial", "In progress" and "Paused" status.</p>
 <% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF1/V1")) { %>
 	<div class="list-app">
-		<h3><small></small>Users <small>(TF1.V1)</small> </h3>
+		<h3><span name="blurupdate" url="/T/update?Rid=25RFV24&Title=" contenteditable="true">Users</span> <small>(TF1.V1)</small> </h3>
 		<small><a href="/users/list">http://~/users/list </a> </small> <br /> 
-		<p>Users in current system</p>
+		<p name="blurupdate" url="/T/update?Rid=25RFV24&Description=" contenteditable="true">Users in current system</p>
 		<div class="text-right">
 			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=25RFV24" title="Rebuild application[Users] to active changes">Rebuild</a>
 			<a href="/T/show?Rid=25RFV24" title="View define detail of application[Users]"><img class="icon15" src="/img/detail.png"></a>
@@ -118,8 +118,6 @@ To manage todo in "Initial", "In progress" and "Paused" status.</p>
 </div>
 </div>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -134,8 +132,7 @@ To manage todo in "Initial", "In progress" and "Paused" status.</p>
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -145,8 +142,8 @@ To manage todo in "Initial", "In progress" and "Paused" status.</p>
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -166,7 +163,7 @@ To manage todo in "Initial", "In progress" and "Paused" status.</p>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
