--- a/app/views/T1XV1new.ejs
+++ b/app/views/T1XV1new.ejs
@@ -60,36 +60,46 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
 <h1>Add New Todo</h1>
 
-<form class='well col-md-12'  method="post" action="/todo/new" target="submitFrame" >
-	<div class="row">
+<form class='fields-section well col-md-12' method="post" action="/todo/new" target="submitFrame" >
+
+<div class='row'>
 <div class='col-md-12 <%= (code != 200) ? "alert alert-danger": "" %>'><%= (code != 200) ? message : "" %></div>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='format' value='json'><input type='hidden' class='hidden' name='app' value='todo'></div>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='Rid' value=''></div>		<div class='col-md-12'><div><label class='control-label title-label'>ID<B class='red'>*</B></label><div class='controls'>
-		<div class='form-show' readonly=true><%= (data["F5"] || '') %><input type='hidden' class='hidden' name='F5' value='<%= data["F5"] || "" %>'></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Priority<B class='red'>*</B></label><div class='controls'>
+<div class='hidden'><input type='hidden' class='hidden' name='format' value='json'>
+<input type='hidden' class='hidden' name='app' value='todo'>
+<input type='hidden' class='hidden' name='Rid' value=''></div><div class='col-md-12'>		<div><label class='control-label title-label'>ID<B class='red'>*</B></label><div class='controls'>
+		<div class='form-show' readonly=true><%= (data["F5"] || '') %><input type='hidden' class='hidden' name='F5' value='<%= data["F5"] || "" %>'></div></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Priority<B class='red'>*</B></label><div class='controls'>
 <% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
 			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  required=true <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Low</label>
 			<label class='radio-inline col-md-2 orange'><input type='radio' name='F3' value='1'  required=true <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/f4.png'>Medium</label>
-			<label class='radio-inline col-md-2 red'><input type='radio' name='F3' value='2'  required=true <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/f5.png'>High</label></div></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Status<B class='red'>*</B></label><div class='controls'>
+			<label class='radio-inline col-md-2 red'><input type='radio' name='F3' value='2'  required=true <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/f5.png'>High</label></div></div></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Status<B class='red'>*</B></label><div class='controls'>
 <% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
 			<label class='radio-inline col-md-2 blue'><input type='radio' name='F2' value='0'  required=true <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/b1.png'>Initial</label>
 			<label class='radio-inline col-md-2 green'><input type='radio' name='F2' value='1'  required=true <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/b2.png'>In progress</label>
 			<label class='radio-inline col-md-2 orange'><input type='radio' name='F2' value='2'  required=true <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> >Paused</label>
-			<label class='radio-inline col-md-2 black'><input type='radio' name='F2' value='3'  required=true <%= (val.contains( "," + "3" + ",")) ? "checked=true" : "" %> >Finished</label></div></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Name<B class='red'>*</B></label><div class='controls'>
-<input type='text' class='form-control' name='F0' value='<%= data["F0"] || "" %>' maxlength=200 minlength=3 required=true unique=true placeholder='Todo name'></div><span class='errormsg'>3~200 chars</span></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Detail<B class='red'>*</B></label><div class='controls'>
-<div id='editor_F1' contenteditable='true' class='richtext'><%- data["F1"] || "" %></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Owner<B class='red'>*</B></label><div class='controls'>
-<input type='text' class='form-control' name='F4' value='<%= data["F4"] || "" %>' required=true unique=true placeholder='Todo detail despcription'></div></div></div>
-<div class='col-md-12'>
-<hr></hr>
-<div><button type="submit" class="btn btn-primary">Commit</button><a  class="small" href="/todo/list">Cancel</a></div></div><div name='history'></div>
+			<label class='radio-inline col-md-2 black'><input type='radio' name='F2' value='3'  required=true <%= (val.contains( "," + "3" + ",")) ? "checked=true" : "" %> >Finished</label></div></div></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Name<B class='red'>*</B></label><div class='controls'>
+<input type='text' class='form-control' name='F0' value='<%= data["F0"] || "" %>' maxlength=200 minlength=3 required=true unique=true placeholder='Todo name'></div><span class='errormsg'>3~200 chars</span></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Detail<B class='red'>*</B></label><div class='controls'>
+<textarea class='form-control richtext' name='F1' ><%= data["F1"] || "" %></textarea></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Owner<B class='red'>*</B></label><div class='controls'>
+<input type='text' class='form-control' name='F4' value='<%= data["F4"] || "" %>' required=true unique=true placeholder='Todo detail despcription'></div></div>
+</div>
+<div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
+<div class="col-md-0"><button type="submit" class="btn btn-primary"    style="min-width:80px;" title="">Commit </button></div>
+<div class="col-md-0"><a class="btn btn-link"  href="/todo/list" style="min-width:80px;" title="">Cancel</a></div>
+</div></div>
+<span name='history' class='col-md-12'></span>
 <script type='text/javascript'>getOPLogs('T1', 'V1', '<%= data["Rid"] %>');</script></div>
 </form>
 <iframe id='submitFrame' name='submitFrame' class='hidden'></iframe>
@@ -105,8 +115,6 @@ if ($('[name=F5]')[0]) { var val = $('[name=F5]').val(); switch ($('[name=F5]').
 
  return msg;}</script>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -121,8 +129,7 @@ if ($('[name=F5]')[0]) { var val = $('[name=F5]').val(); switch ($('[name=F5]').
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -132,8 +139,8 @@ if ($('[name=F5]')[0]) { var val = $('[name=F5]').val(); switch ($('[name=F5]').
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -153,7 +160,7 @@ if ($('[name=F5]')[0]) { var val = $('[name=F5]').val(); switch ($('[name=F5]').
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
