--- a/app/views/TF0XV1list.ejs
+++ b/app/views/TF0XV1list.ejs
@@ -61,41 +61,74 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
-<h1>List Roles  <small><a  class="" href="/roles/new"><img src="/img/add.png" alt="New" title="New">New</a></small></h1>
+<h1>Roles  <small><a class="btn btn-link" href="/roles/new" href="/roles/new" style="min-width:80px;"><img src="/img/add.png">New</a></small></h1>
 <form class='navbar-form navbar-left' action='javascrip:doFilter();'>
 <div class='form-group small' style='width:230px'><div class='input-group'><input type='text' name='filterstring' class='form-control data-filter' value='<%= (request.u.data["condition"] || "") %>' placeholder='Search in page'>
-<div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a><button type='button' class='btn btn-default dropdown-toggle' data-toggle='dropdown' style='padding-left:5px;padding-right:5px;'>More <span class='caret'></span></button><ul class='dropdown-menu dropdown-menu-right' role='menu'>
-	<li><a name='search' href='javascript:;'>Search In Site</a></li>
-</ul></div></div></div>
-<div class='form-group small'>undefined</div>
+<div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a></div></div></div>
+<div class='form-group small'></div>
 	</form><div class='col-md-6 hidden'>
 <div class='input-group'><input type='text' name='condition' class='form-control'><span name='search' class='input-group-addon glyphicon glyphicon-search'></span></div>
-	</div><table class='table'>
+	</div><% function getF1(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "*" + ",")) {    opts += "<span class='wid100'>All</span> "; } 
+   if (val.contains( "," + "T2/V1" + ",")) {    opts += "<span class='wid100'>Users</span> "; } 
+   if (val.contains( "," + "T2/V3" + ",")) {    opts += "<span class='wid100'>UserLogin</span> "; } 
+   if (val.contains( "," + "T3/V1" + ",")) {    opts += "<span class='wid100'>Links</span> "; } 
+   if (val.contains( "," + "T4/V1" + ",")) {    opts += "<span class='wid100'>Todo</span> "; } 
+   if (val.contains( "," + "T5/V1" + ",")) {    opts += "<span class='wid100'>Money</span> "; } 
+   if (val.contains( "," + "T5/V2" + ",")) {    opts += "<span class='wid100'>lend</span> "; } 
+   if (val.contains( "," + "T5/V4" + ",")) {    opts += "<span class='wid100'>brotherlend</span> "; } 
+   if (val.contains( "," + "T6/V1" + ",")) {    opts += "<span class='wid100'>books</span> "; } 
+   if (val.contains( "," + "T7/V1" + ",")) {    opts += "<span class='wid100'>Words</span> "; } 
+   if (val.contains( "," + "T9/V1" + ",")) {    opts += "<span class='wid100'>Booking</span> "; } 
+   if (val.contains( "," + "T9/V2" + ",")) {    opts += "<span class='wid100'>Servers</span> "; } 
+   if (val.contains( "," + "TA/V1" + ",")) {    opts += "<span class='wid100'>VMs</span> "; } 
+   return opts; } %>
+<% function getF2(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "1" + ",")) {    opts += "Enable "; } 
+   if (val.contains( "," + "0" + ",")) {    opts += "Disable "; } 
+   return opts; } %>
+<% function getF3(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "1" + ",")) {    opts += "Yes "; } 
+   if (val.contains( "," + "0" + ",")) {    opts += "No "; } 
+   return opts; } %>
+<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='roles'></div><table class='table'>
   <thead>
-	<tr><div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='roles'></div><th  Fid="F0">Role</th><th  Fid="F1" class='col-md-6'>Application</th><th  Fid="F2">Enable</th><th  Fid="F3">Default Role</th><th  class='wid30'>Edit</th><th  class='wid30'>Copy</th><th  class='wid30'>Remove</th>
+	<tr><th  Fid='F0'>Role</th>
+<th class='col-md-6'  Fid='F1'>Application</th>
+<th  Fid='F2'>Enable</th>
+<th  Fid='F3'>Default Role</th>
+<th class='wid30' Fid='edit'></th>
+<th class='wid30' Fid='copy'></th>
+<th class='wid30' Fid='remove'></th>
+
 	</tr>
   </thead>
   <tbody>
 	<% if(data.length < 1) { %>
-	<tr><td colspan="7">No recorder yet. Add one now? <a  class="" href="/roles/new"><img src="/img/add.png" alt="New" title="New">New</a></td></tr>	<% }
+	<tr><td colspan="7">No recorder yet. Add one now? <a class="btn btn-link" href="/roles/new" href="/roles/new" style="min-width:80px;"><img src="/img/add.png">New</a></td></tr>	<% }
  var group = ""; for(var item in data) { 
- %>	<tr Rid='<%= data[item]["Rid"] %>'>
-  <td Fid="F0" ><a  class="" href="/roles/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
-  <td Fid="F1" ><% var val = data[item]["F1"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "*" + ",")) { %><span class='wid100'>All<% } %> </span><% if (val.contains( "," + "T2/V1" + ",")) { %><span class='wid100'>Users<% } %> </span><% if (val.contains( "," + "T2/V3" + ",")) { %><span class='wid100'>UserLogin<% } %> </span><% if (val.contains( "," + "T3/V1" + ",")) { %><span class='wid100'>Links<% } %> </span><% if (val.contains( "," + "T4/V1" + ",")) { %><span class='wid100'>Todo<% } %> </span><% if (val.contains( "," + "T5/V1" + ",")) { %><span class='wid100'>Money<% } %> </span><% if (val.contains( "," + "T5/V2" + ",")) { %><span class='wid100'>lend<% } %> </span><% if (val.contains( "," + "T5/V4" + ",")) { %><span class='wid100'>brotherlend<% } %> </span><% if (val.contains( "," + "T6/V1" + ",")) { %><span class='wid100'>books<% } %> </span><% if (val.contains( "," + "T7/V1" + ",")) { %><span class='wid100'>Words<% } %> </span><% if (val.contains( "," + "T9/V1" + ",")) { %><span class='wid100'>Booking<% } %> </span><% if (val.contains( "," + "T9/V2" + ",")) { %><span class='wid100'>Servers<% } %> </span><% if (val.contains( "," + "TA/V1" + ",")) { %><span class='wid100'>VMs<% } %> </span></td>
-  <td Fid="F2" ><% var val = data[item]["F2"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "1" + ",")) { %>Enable<% } %> <% if (val.contains( "," + "0" + ",")) { %>Disable<% } %> </td>
-  <td Fid="F3" ><% var val = data[item]["F3"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "1" + ",")) { %>Yes<% } %> <% if (val.contains( "," + "0" + ",")) { %>No<% } %> </td>
-  <td ><div class="wid30"><a  class="" href="/roles/update?Rid=<%= data[item]["Rid"] %>"><img src="/img/edit.png" alt="" title=""></a></div></td>
-  <td ><div class="wid30"><a  class="" href="/roles/copy?Rid=<%= data[item]["Rid"] %>"><img src="/img/copy.png" alt="" title=""></a></div></td>
-  <td ><div class="wid30"><a name="remove" class="" href="javascript:;" url="/roles/remove?Rid=<%= data[item]["Rid"] %>"><img src="/img/remove.png" alt="" title=""></a></div></td>
+ %><tr Rid='<%= data[item]["Rid"] %>'><td  Fid='F0'><a  class="" href="/roles/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
+<td class="col-md-6"  Fid='F1'><%- getF1(data[item]["F1"]) %></td>
+<td  Fid='F2'><%- getF2(data[item]["F2"]) %></td>
+<td  Fid='F3'><%- getF3(data[item]["F3"]) %></td>
+<td class="wid30"><a href="/roles/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
+<td class="wid30"><a href="/roles/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
+<td class="wid30"><a name="remove" href="javascript:;" url="/roles/remove?Rid=<%= data[item]["Rid"] %>" name="delete" title=""><img src="/img/remove.png"></a></td>
+</tr>
 
-	</tr>
 	<% } %>
   </tbody>
 </table>
 
-<div class='input-group hidden'><input type='hidden' class='hidden' name='ids' value='F0,'></div><div class='summaryarea'></div><script type='text/javascript'>
+<span class='input-group hidden'><input type='hidden' class='hidden' name='ids' value=''></span><span class='col-md-12 summaryarea'></span><script type='text/javascript'>
   var summaryid = '';
 
 	$("[sub='true']").each(function () {
@@ -105,8 +138,6 @@
 	});
  summary();</script>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -121,8 +152,7 @@
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -132,8 +162,8 @@
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -153,7 +183,7 @@
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
