--- a/app/views/TF0XV1new.ejs
+++ b/app/views/TF0XV1new.ejs
@@ -61,17 +61,20 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
 <h1>Add New Roles</h1>
 
-<form class='well col-md-12'  method="post" action="/roles/new" target="submitFrame" >
-	<div class="row">
+<form class='fields-section well col-md-12' method="post" action="/roles/new" target="submitFrame" >
+
+<div class='row'>
 <div class='col-md-12 <%= (code != 200) ? "alert alert-danger": "" %>'><%= (code != 200) ? message : "" %></div>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='format' value='json'><input type='hidden' class='hidden' name='app' value='roles'></div>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='Rid' value=''></div>		<div class='col-md-12'><div><label class='control-label title-label'>Role<B class='red'>*</B></label><div class='controls'>
-<input type='text' class='form-control' name='F0' value='<%= data["F0"] || "" %>' required=true unique=true placeholder='Role name'></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Application<B class='red'>*</B></label><div class='controls'>
+<div class='hidden'><input type='hidden' class='hidden' name='format' value='json'>
+<input type='hidden' class='hidden' name='app' value='roles'>
+<input type='hidden' class='hidden' name='Rid' value=''></div><div class='col-md-12'>		<div><label class='control-label title-label'>Role<B class='red'>*</B></label><div class='controls'>
+<input type='text' class='form-control' name='F0' value='<%= data["F0"] || "" %>' required=true unique=true placeholder='Role name'></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Application<B class='red'>*</B></label><div class='controls'>
 <% var val = data["F1"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><input type='checkbox' name='F1' value='' checked=true class='hidden' ><div class='min-h20'>
 			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='*'  required=true <%= (val.contains( "," + "*" + ",")) ? "checked=true" : "" %> >All</label>
 			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T2/V1'  required=true <%= (val.contains( "," + "T2/V1" + ",")) ? "checked=true" : "" %> >Users</label>
@@ -85,18 +88,23 @@
 			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T7/V1'  required=true <%= (val.contains( "," + "T7/V1" + ",")) ? "checked=true" : "" %> >Words</label>
 			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T9/V1'  required=true <%= (val.contains( "," + "T9/V1" + ",")) ? "checked=true" : "" %> >Booking</label>
 			<label class='checkbox-inline wid100'><input type='checkbox' name='F1' value='T9/V2'  required=true <%= (val.contains( "," + "T9/V2" + ",")) ? "checked=true" : "" %> >Servers</label></div><div class='min-h20'>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='TA/V1'  required=true <%= (val.contains( "," + "TA/V1" + ",")) ? "checked=true" : "" %> >VMs</label></div></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Enable</label><div class='controls'>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='TA/V1'  required=true <%= (val.contains( "," + "TA/V1" + ",")) ? "checked=true" : "" %> >VMs</label></div></div></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Enable</label><div class='controls'>
 <% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
 			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Enable</label>
-			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Disable</label></div></div></div></div></div>
-		<div class='col-md-12'><div><label class='control-label title-label'>Default Role</label><div class='controls'>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Disable</label></div></div></div></div>
+</div>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Default Role</label><div class='controls'>
 <% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
 			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Yes</label>
-			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >No</label></div></div></div></div></div>
-<div class='col-md-12'>
-<hr></hr>
-<div><button type="submit" class="btn btn-primary">Save</button><a  class="small" href="/roles/list">Cancel</a></div></div><div name='history'></div>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >No</label></div></div></div></div>
+</div>
+<div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
+<div class="col-md-0"><button type="submit" class="btn btn-primary"    style="min-width:80px;" title="">Save </button></div>
+<div class="col-md-0"><a class="btn btn-link"  href="/roles/list" style="min-width:80px;" title="">Cancel</a></div>
+</div></div>
+<span name='history' class='col-md-12'></span>
 <script type='text/javascript'>getOPLogs('TF0', 'V1', '<%= data["Rid"] %>');</script></div>
 </form>
 <iframe id='submitFrame' name='submitFrame' class='hidden'></iframe>
@@ -110,8 +118,6 @@ if ($('[name=F3]')[0]) { var val = $('[name=F3]').val(); switch ($('[name=F3]').
 
  return msg;}</script>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -126,8 +132,7 @@ if ($('[name=F3]')[0]) { var val = $('[name=F3]').val(); switch ($('[name=F3]').
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -137,8 +142,8 @@ if ($('[name=F3]')[0]) { var val = $('[name=F3]').val(); switch ($('[name=F3]').
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -158,7 +163,7 @@ if ($('[name=F3]')[0]) { var val = $('[name=F3]').val(); switch ($('[name=F3]').
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
