--- a/app/views/TF1XV1list.ejs
+++ b/app/views/TF1XV1list.ejs
@@ -61,42 +61,66 @@
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
     </div>
+	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-	<div id="container" class="container">
-<h1>List Users  <small><a  class="" href="/users/new"><img src="/img/add.png" alt="Add User" title="Add User">Add User</a></small></h1>
+<h1>Users  <small><a class="btn btn-link" href="/users/new" href="/users/new" style="min-width:80px;"><img src="/img/add.png">Add User</a></small></h1>
 <form class='navbar-form navbar-left' action='javascrip:doFilter();'>
 <div class='form-group small' style='width:230px'><div class='input-group'><input type='text' name='filterstring' class='form-control data-filter' value='<%= (request.u.data["condition"] || "") %>' placeholder='Search in page'>
-<div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a><button type='button' class='btn btn-default dropdown-toggle' data-toggle='dropdown' style='padding-left:5px;padding-right:5px;'>More <span class='caret'></span></button><ul class='dropdown-menu dropdown-menu-right' role='menu'>
-	<li><a name='search' href='javascript:;'>Search In Site</a></li>
-</ul></div></div></div>
+<div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a></div></div></div>
 <div class='form-group small'>undefined</div>
 	</form><div class='col-md-6 hidden'>
 <div class='input-group'><input type='text' name='condition' class='form-control'><span name='search' class='input-group-addon glyphicon glyphicon-search'></span></div>
-	</div><table class='table'>
+	</div><% function getF3(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "Administrator" + ",")) {    opts += "Administrator "; } 
+   if (val.contains( "," + "Default" + ",")) {    opts += "Default "; } 
+   return opts; } %>
+<% function getF4(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "1" + ",")) {    opts += "Yes "; } 
+   if (val.contains( "," + "0" + ",")) {    opts += "No "; } 
+   return opts; } %>
+<% function getF5(val) { 
+  var opts = ""; 
+  val = "," + (val || "") + ","; 
+  if (val.contains( "," + "-360" + ",")) {    opts += "<span class='wid150'>(UTC-06:00) Houston</span> "; } 
+   if (val.contains( "," + "330" + ",")) {    opts += "<span class='wid150'>(UTC+05:30) India</span> "; } 
+   if (val.contains( "," + "480" + ",")) {    opts += "<span class='wid150'>(UTC+08:00) China</span> "; } 
+   return opts; } %>
+<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='users'></div><table class='table'>
   <thead>
-	<tr><div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='users'></div><th  Fid="F0">Name</th><th  Fid="F1">Email</th><th  Fid="F2">Password</th><th  Fid="F3">Role</th><th  Fid="F4">Enable</th><th  Fid="F5">TimeZone</th><th >Edit</th><th >Copy</th>
+	<tr><th  Fid='F0'>Name</th>
+<th  Fid='F1'>Email</th>
+<th  Fid='F2'>Password</th>
+<th  Fid='F3'>Role</th>
+<th  Fid='F4'>Enable</th>
+<th  Fid='F5'>TimeZone</th>
+<th Fid='edit'></th>
+<th Fid='copy'></th>
+
 	</tr>
   </thead>
   <tbody>
 	<% if(data.length < 1) { %>
-	<tr><td colspan="8">No recorder yet. Add one now? <a  class="" href="/users/new"><img src="/img/add.png" alt="Add User" title="Add User">Add User</a></td></tr>	<% }
+	<tr><td colspan="8">No recorder yet. Add one now? <a class="btn btn-link" href="/users/new" href="/users/new" style="min-width:80px;"><img src="/img/add.png">Add User</a></td></tr>	<% }
  var group = ""; for(var item in data) { 
-if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group"><th colspan="8"><b class="glyphicon glyphicon-minus-sign"></b> TimeZone: <% var val = data[item]["F5"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "-360" + ",")) { %><span class='wid150'>(UTC-06:00) Houston<% } %> </span><% if (val.contains( "," + "330" + ",")) { %><span class='wid150'>(UTC+05:30) India<% } %> </span><% if (val.contains( "," + "480" + ",")) { %><span class='wid150'>(UTC+08:00) China<% } %> </span> </th></tr> <% } %>	<tr Rid='<%= data[item]["Rid"] %>'>
-  <td Fid="F0" ><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></td>
-  <td Fid="F1" ><%= ("F1" in data[item]) ? data[item]["F1"] : "" %></td>
-  <td Fid="F2" >******</td>
-  <td Fid="F3" ><% var val = data[item]["F3"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "Administrator" + ",")) { %>Administrator<% } %> <% if (val.contains( "," + "Default" + ",")) { %>Default<% } %> </td>
-  <td Fid="F4" ><% var val = data[item]["F4"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "1" + ",")) { %>Yes<% } %> <% if (val.contains( "," + "0" + ",")) { %>No<% } %> </td>
-  <td Fid="F5" ><% var val = data[item]["F5"] || "";  val = "," + val.toString() + ","; %><% if (val.contains( "," + "-360" + ",")) { %><span class='wid150'>(UTC-06:00) Houston<% } %> </span><% if (val.contains( "," + "330" + ",")) { %><span class='wid150'>(UTC+05:30) India<% } %> </span><% if (val.contains( "," + "480" + ",")) { %><span class='wid150'>(UTC+08:00) China<% } %> </span></td>
-  <td ><a  class="" href="/users/update?Rid=<%= data[item]["Rid"] %>"><img src="/img/edit.png" alt="" title=""></a></td>
-  <td ><a  class="" href="/users/copy?Rid=<%= data[item]["Rid"] %>"><img src="/img/copy.png" alt="" title=""></a></td>
+if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group"><th colspan="8"><b class="glyphicon glyphicon-minus-sign"></b> TimeZone: <%= group %> </th></tr> <% } %><tr Rid='<%= data[item]["Rid"] %>'><td  Fid='F0'><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></td>
+<td  Fid='F1'><%= ("F1" in data[item]) ? data[item]["F1"] : "" %></td>
+<td  Fid='F2'>******</td>
+<td  Fid='F3'><%- getF3(data[item]["F3"]) %></td>
+<td  Fid='F4'><%- getF4(data[item]["F4"]) %></td>
+<td  Fid='F5'><%- getF5(data[item]["F5"]) %></td>
+<td Fid="edit"><a href="/users/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
+<td Fid="copy"><a href="/users/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
+</tr>
 
-	</tr>
 	<% } %>
   </tbody>
 </table>
 
-<div class='input-group hidden'><input type='hidden' class='hidden' name='ids' value='F0,F1,'></div><div class='summaryarea'></div><script type='text/javascript'>
+<span class='input-group hidden'><input type='hidden' class='hidden' name='ids' value=''></span><span class='col-md-12 summaryarea'></span><script type='text/javascript'>
   var summaryid = '';
 
 	$("[sub='true']").each(function () {
@@ -106,8 +130,6 @@ if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group">
 	});
  summary();</script>
 
-
-	<div class="row"></div>
 	<div class="go-top">
 	<div class="btn-group">
 		<a href="#" class="btn btn-default hidden"></a>
@@ -122,8 +144,7 @@ if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group">
 	<%- (("" || warning).length > 0) ?  'var warning = \'' + warning.replace(/'/g, "\\'") + '\'; \n  setTimeout("warn(warning)", 2);' : '' %>
 	
 </script>
-	<div id="ModalView">
-	</div>
+	<div id="ModalView"></div>
 <div class="modal" id="ConfirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -133,8 +154,8 @@ if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group">
       </div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal">OK</a>
-        <a href="#" class="btn confirm-cancelbtn">Cancel</a>
+        <a href="#" class="btn  btn-success confirm-btn" data-dismiss="modal" style="min-width:80px;">OK</a>
+        <a href="#" class="btn confirm-cancelbtn" style="min-width:80px;">Cancel</a>
       </div>
     </div>
   </div>
@@ -154,7 +175,7 @@ if (data[item]["F5"] != group) { group = data[item]["F5"]; %> <tr class="group">
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.2.0</a> at 2014.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
