--- a/app/web/css/style.css
+++ b/app/web/css/style.css
@@ -1,9 +1,4 @@
 
-body {
-	padding-top: 60px;
-	padding-bottom: 10px;
-}
-
 .right{text-align:right;}
 
 .red{color: #FF0000;}
@@ -43,6 +38,11 @@ body {
 .wid700{width: 700px;}
 .wid800{width: 800px;}
 .wid900{width: 900px;}
+.p0{width: 0%;}
+.p25{width: 25%;}
+.p50{width: 50%;}
+.p75{width: 75%;}
+.p100{width: 100%;}
 
 .font110 {font-size: 110%;}
 .font120 {font-size: 120%;}
@@ -68,6 +68,39 @@ body {
 .padding2 {  padding: 9px;}
 .padding3{  padding: 14px;}
 
+.clickable {	cursor: pointer;}
+.editable {
+	background-color: #FFFFFF;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	min-width: 30px;
+	min-height: 20px;
+	padding: 4px 10px;
+}
+div {
+	min-height: 34px;
+}
+td > div {
+	min-height: 15px;
+}
+.auto-fit {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.col-md-0 {
+	float: left;
+	position: relative;
+	min-height: 1px;
+	padding: 4px 1px;
+}
+.col-md-auto {
+	float: left;
+	position: relative;
+	min-height: 1px;
+	padding-right: 15px;
+	padding-left: 15px;
+}
 .pull-left.well {
   padding: 2px 10px 2px 10px;
   min-width: 60%;
@@ -77,6 +110,76 @@ body {
 	padding: 8px 8px 8px 0px;
 	min-width: 30px;
 }
+
+.switch-icon>.active {
+  display: none !important;
+  visibility: hidden !important;
+}
+
+.switch-icon>.btn {
+	padding: 5px 12px;
+}
+
+.filter { 
+  margin: 2px;
+  display: inline-block;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 17px;
+  padding: 6px;
+  min-width: 34px;
+  height: 34px;
+  color: #337ab7;
+  text-decoration: none;
+  text-align: center;
+  vertical-align: middle;
+}
+.filter:hover, .filter:focus{
+  text-decoration: none;
+  background-color: #eee;
+}
+
+.filter-circle {
+  font-size: 22px;
+}
+
+.switch-icon {
+  background-color: #F5F5F5;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  color: #9DA0A4;
+  content: "Row";
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 2;
+  padding: 0px;
+  position: absolute;
+  right: 15px;
+  top: 0px;
+  z-index: 1;
+	-moz-opacity:0.8; 
+	filter:alpha(opacity=80);
+	opacity:0.8;
+ }
+.tabs-below>.nav-tabs,.tabs-right>.nav-tabs,.tabs-left>.nav-tabs{border-bottom:0;}
+.tab-content>.tab-pane,.pill-content>.pill-pane{display:none;}
+.tab-content>.active,.pill-content>.active{display:block;}
+.tabs-below>.nav-tabs{border-top:1px solid #ddd;}
+.tabs-below>.nav-tabs>li{margin-top:-1px;margin-bottom:0;}
+.tabs-below>.nav-tabs>li>a{-webkit-border-radius:0 0 4px 4px;-moz-border-radius:0 0 4px 4px;border-radius:0 0 4px 4px;}.tabs-below>.nav-tabs>li>a:hover,.tabs-below>.nav-tabs>li>a:focus{border-bottom-color:transparent;border-top-color:#ddd;}
+.tabs-below>.nav-tabs>.active>a,.tabs-below>.nav-tabs>.active>a:hover,.tabs-below>.nav-tabs>.active>a:focus{border-color:transparent #ddd #ddd #ddd;}
+.tabs-left>.nav-tabs>li,.tabs-right>.nav-tabs>li{float:none;}
+.tabs-left>.nav-tabs>li>a,.tabs-right>.nav-tabs>li>a{min-width:74px;margin-right:0;margin-bottom:3px;}
+.tabs-left>.nav-tabs{float:left;margin-right:19px;border-right:1px solid #ddd;}
+.tabs-left>.nav-tabs>li>a{margin-right:-1px;-webkit-border-radius:4px 0 0 4px;-moz-border-radius:4px 0 0 4px;border-radius:4px 0 0 4px;}
+.tabs-left>.nav-tabs>li>a:hover,.tabs-left>.nav-tabs>li>a:focus{border-color:#eeeeee #dddddd #eeeeee #eeeeee;}
+.tabs-left>.nav-tabs .active>a,.tabs-left>.nav-tabs .active>a:hover,.tabs-left>.nav-tabs .active>a:focus{border-color:#ddd transparent #ddd #ddd;*border-right-color:#ffffff;}
+.tabs-right>.nav-tabs{float:right;margin-left:19px;border-left:1px solid #ddd;}
+.tabs-right>.nav-tabs>li>a{margin-left:-1px;-webkit-border-radius:0 4px 4px 0;-moz-border-radius:0 4px 4px 0;border-radius:0 4px 4px 0;}
+.tabs-right>.nav-tabs>li>a:hover,.tabs-right>.nav-tabs>li>a:focus{border-color:#eeeeee #eeeeee #eeeeee #dddddd;}
+.tabs-right>.nav-tabs .active>a,.tabs-right>.nav-tabs .active>a:hover,.tabs-right>.nav-tabs .active>a:focus{border-color:#ddd #ddd #ddd transparent;*border-left-color:#ffffff;}
+
+
 .fixed-rectangle {
 display: inline-block;
 border: 1px solid #e8e8e8;
@@ -186,7 +289,7 @@ div.list-app:focus  div {
 .fixed-bottom {
 	position: fixed;
 	bottom: 0px;
-	z-index: 9999;
+	z-index: 2;
 }
 .section-action{
 	margin-left: -19px;
